--- a/untiteld.css
+++ b/untiteld.css
@@ -2,7 +2,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
-    background-image: url("Imagen/f3.png");
+    background-image: url("Imagen/f3.jpg");
 }
 header {
     background-color: orange;
